colour issues on dark mode

--- a/src/components/Charts/styles.scss
+++ b/src/components/Charts/styles.scss
@@ -71,6 +71,7 @@
 .latest {
   font-size: 0.8rem;
   line-height: normal;
+  color: #111 !important;
   > span {
     white-space: nowrap;
   }
