--- a/src/components/SmallMultiples/styles.scss
+++ b/src/components/SmallMultiples/styles.scss
@@ -22,6 +22,7 @@
   margin: 1em 0;
   font-size: 1.3125rem;
   font-weight: bold;
+  color: #111 !important;
 }
 
 .small-multipes {
